<resources>
    <string name="is_that_a_pressy_title">Pressy ?</string>
    <string name="is_that_a_pressy_message">Is that Pressy ?</string>
    <string name="set_pressy_as_default_long_press_dialog_title">Important!</string>
    <string name="set_pressy_as_default_long_press_dialog_message">Please set Pressy as default and choose Always in order for it to work properly.</string>
    <string name="long_click_handler_chooser_title">Handle long press with...</string>
    <string name="set_pressy_default_instructions">Select \"Pressy\" and click \"Always\" to set Pressy as default</string>
    <string name="clear_default_long_press_handler_instructions">%1$s is currently set as default long press handler. Click the \"Clear Defaults\", \"Uninstall updates\" or \"Disable\" button and press back</string>
    <string name="pressy_pressed_when_plugged">Pressy was pressed while being plugged in. Please disconnect Pressy and connect again without Pressing</string>
    <string name="button_text_got_it">Got it!</string>
    <string name="pressy_state_pressy">Pressy</string>
    <string name="pressy_state_headphones">Headphones</string>
    <string name="pressy_state_ignore">Ignore</string>
    <string name="set_pressy_default_dialog_title">Set Pressy as default for long press</string>
    <string name="set_pressy_default_conflicting_apps_header">Conflicting apps</string>
    <string name="button_text_set_pressy_default_go">GO</string>
    <string name="set_pressy_default_no_default_set">"Set pressy as default (no default app is set).
Click \"GO\" and then select \"Pressy\" and \"Always\""</string>
    <string name="set_pressy_default_clear_other_app_default">"Clear defaults for other app (other app is defined as default).
Click \"GO\" and then the \"Clear defaults\" button"</string>
    <string name="set_pressy_default_disable_other_app">"Disable conflicting app.
Click \"Go\" and then \"Disable\" (in case \"Disable\" button is not available, click the \"Uninstall updates\" button)"</string>
    <string name="set_pressy_default_cancel_title">Cancel set Pressy as default</string>
    <string name="set_pressy_default_cancel_message">Are you sure you want to cancel setting Pressy as default? Long press patterns will not be available</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="auth_client_using_bad_version_title">An application attempted to use a bad version of Google Play Services.</string>
    <string name="auth_client_needs_enabling_title">An application requires Google Play Services to be enabled.</string>
    <string name="auth_client_needs_installation_title">An application requires installation of Google Play Services.</string>
    <string name="auth_client_needs_update_title">An application requires an update for Google Play Services.</string>
    <string name="auth_client_play_services_err_notification_msg">Google Play services error</string>
    <string name="auth_client_requested_by_msg">Requested by %1$s</string>
    <string name="location_client_powered_by_google">Powered by Google</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="ga_trackingId">UA-47545999-1</string>
    <string name="url_recommend_pressy_to_friend">http://pressybutton.com</string>
    <string name="url_get_more_pressy">http://pressybutton.com</string>
    <string name="app_name">Pressy</string>
    <string name="app_name_uppercase">PRESSY</string>
    <string name="launching_rule">Launching \"%1$s\"</string>
    <string name="no_matching_rule_found_for_pattern">This trigger is not in use</string>
    <string name="action_title_add_rule">Add action</string>
    <string name="action_title_back_to_rules_list">Back to actions list</string>
    <string name="action_title_settings">Settings</string>
    <string name="action_title_pressy_media">Media browser</string>
    <string name="action_title_recommend">Recommend Pressy to a friend</string>
    <string name="action_title_get_more_pressy">Get more Pressys</string>
    <string name="action_title_rate">Rate us</string>
    <string name="action_title_tutorial">Tutorial</string>
    <string name="action_title_about">About</string>
    <string name="action_title_help">Feedback &amp; Help</string>
    <string name="action_title_cancel">Cancel</string>
    <string name="action_title_ok">OK</string>
    <string name="update_rule_success">Action updated</string>
    <string name="delete_rule_are_you_sure_title">Delete action</string>
    <string name="delete_rule_are_you_sure_message">Are you sure you want to delete \"%1$s\"?</string>
    <string name="action_type_phone">CALLS</string>
    <string name="action_type_message">MESSAGE</string>
    <string name="action_type_camera">CAMERA</string>
    <string name="action_type_light">LIGHT</string>
    <string name="action_type_record">RECORDER</string>
    <string name="action_type_video">VIDEO</string>
    <string name="action_type_run_app">RUN APP</string>
    <string name="action_type_media">MEDIA</string>
    <string name="action_type_developer">DEVELOPER</string>
    <string name="action_type_location">LOCATION</string>
    <string name="action_type_script">SCRIPT</string>
    <string name="action_type_settings">SETTINGS</string>
    <string name="action_type_unknown">UNKNOWN</string>
    <string name="title_activity_add_action">Add Action</string>
    <string name="enter_action_name">Action name</string>
    <string name="button_text_done">DONE</string>
    <string name="trigger">Trigger</string>
    <string name="multiple_actions">Multiple</string>
    <string name="validation_error_no_pattern_selected">No trigger selected</string>
    <string name="phone_number_picker_hint">Type contact name or number</string>
    <string name="action_light_toggle">Toggle on/off</string>
    <string name="action_light_on">Turn on</string>
    <string name="action_light_off">Turn off</string>
    <string name="action_light_blink">Blink</string>
    <string name="back_camera">Back Camera</string>
    <string name="front_camera">Front Camera</string>
    <string name="both_cameras">Both Cameras</string>
    <string name="flash_auto">Auto</string>
    <string name="flash_on">Flash On</string>
    <string name="flash_off">Flash Off</string>
    <string name="open_camera_app">Launch Camera</string>
    <string name="take_picture">Take Instant Photo</string>
    <string name="message_text_hint">Enter message text</string>
    <string name="message_include_location_link">Send location link</string>
    <string name="message_include_location_address">Send address</string>
    <string name="show_toast_for_launched_actions_header">Show notifications</string>
    <string name="show_toast_for_launched_actions_desc">Show notification for every launched action</string>
    <string name="show_toast_for_unhandled_patterns_header">Show unhandled patterns message</string>
    <string name="show_toast_for_unhandled_patterns_desc">Show notification when unused pattern is pressed</string>
    <string name="vibration_feedback_header">Vibration feedback</string>
    <string name="vibration_feedback_desc">Vibrate when pressed</string>
    <string name="button_text_about_us">About</string>
    <string name="button_text_start_tutorial">Start tutorial</string>
    <string name="button_text_restore_settings">Restore settings</string>
    <string name="button_text_send_feedback">Send feedback</string>
    <string name="action_setting_toggle_wifi">Toggle WiFi</string>
    <string name="action_setting_toggle_bluetooth">Toggle Bluetooth</string>
    <string name="action_setting_toggle_sound">Toggle Mute</string>
    <string name="action_setting_toggle_vibrate">Toggle Vibrate</string>
    <string name="action_setting_lock_screen_rotation">Lock Screen Rotation</string>
    <string name="action_setting_launch_dashboard">Launch Dashboard</string>
    <string name="presses_speed_setting_desc">Response time</string>
    <string name="presses_speed_setting_hint">Fast will trigger actions quicker, Slow will be easier to perform</string>
    <string name="presses_speed_setting_slow">Slow</string>
    <string name="presses_speed_setting_normal">Normal</string>
    <string name="presses_speed_setting_fast">Fast</string>
    <string name="enable_long_presses_header">Enable long presses</string>
    <string name="enable_long_presses_desc">Use Pressy as default for long presses</string>
    <string name="enable_pressy_setting_header">Enable Pressy</string>
    <string name="enable_pressy_setting_desc">Pressy app handles presses</string>
    <string name="action_setting_home_screen">Home screen</string>
    <string name="action_setting_curtain">Show/Hide Notifications</string>
</resources>