<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RadioGroup android:orientation="vertical" android:id="@id/radioGroupCameraAction" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/padding_radio_group_checkbox_left">
        <RadioButton android:id="@id/radioOpenCameraApp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/open_camera_app" style="@style/PressyRadioButton" />
        <View android:background="@color/separator" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="@dimen/padding_large" android:layout_marginTop="@dimen/padding_large" android:layout_marginRight="@dimen/padding_large" android:layout_marginBottom="@dimen/padding_large" />
        <RadioButton android:id="@id/radioTakePicture" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/take_picture" style="@style/PressyRadioButton" />
        <LinearLayout android:orientation="vertical" android:id="@id/layoutTakePictureDetails" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/padding_radio_group_checkbox_left_indent_level2">
            <RadioGroup android:id="@id/radioGroupTakePictureSelectedCamera" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/padding_radio_group_checkbox_left">
                <RadioButton android:id="@id/radioTakePictureBackCamera" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/back_camera" style="@style/PressyRadioButton" />
                <RadioButton android:id="@id/radioTakePictureFrontCamera" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/front_camera" style="@style/PressyRadioButton" />
                <RadioButton android:id="@id/radioTakePictureBothCameras" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/both_cameras" style="@style/PressyRadioButton" />
            </RadioGroup>
            <View android:background="@color/separator" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="@dimen/padding_large" android:layout_marginTop="@dimen/padding_large" android:layout_marginRight="@dimen/padding_large" android:layout_marginBottom="@dimen/padding_large" />
            <RadioGroup android:id="@id/radioGroupFlashMode" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/padding_radio_group_checkbox_left">
                <RadioButton android:id="@id/radioFlashAuto" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/flash_auto" style="@style/PressyRadioButton" />
                <RadioButton android:id="@id/radioFlashOn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/flash_on" style="@style/PressyRadioButton" />
                <RadioButton android:id="@id/radioFlashOff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/flash_off" style="@style/PressyRadioButton" />
            </RadioGroup>
        </LinearLayout>
    </RadioGroup>
</ScrollView>