<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.pressy.app.ui.PhoneNumberPickerView android:id="@id/txtPhoneNumber" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/padding_large" android:hint="@string/phone_number_picker_hint" android:singleLine="true" android:imeOptions="actionNext" />
    <EditText android:gravity="start|top|center" android:id="@id/txtMessageText" android:background="@drawable/edit_text_background" android:padding="@dimen/padding_normal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/padding_large" android:hint="@string/message_text_hint" android:lines="3" />
    <CheckBox android:id="@id/chkIncludeLocationAddress" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/padding_radio_group_checkbox_left" android:text="@string/message_include_location_address" style="@style/PressyCheckBox" />
    <CheckBox android:id="@id/chkIncludeLocationLink" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/padding_radio_group_checkbox_left" android:text="@string/message_include_location_link" style="@style/PressyCheckBox" />
</LinearLayout>