<?xml version="1.0" encoding="utf-8"?>
<RadioGroup android:orientation="vertical" android:id="@id/radioGroupSettings" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/padding_radio_group_checkbox_left" android:layout_marginRight="@dimen/padding_radio_group_checkbox_left"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RadioButton android:gravity="center_vertical" android:id="@id/radioSettingsDashboard" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="true" android:text="@string/action_setting_launch_dashboard" android:drawableRight="@drawable/ic_action_settings_dashboard_small" android:drawablePadding="@dimen/padding_normal" style="@style/PressyRadioButton" />
    <View android:background="@color/separator" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <RadioButton android:gravity="center_vertical" android:id="@id/radioSettingsWifi" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/action_setting_toggle_wifi" android:drawableRight="@drawable/ic_action_settings_wifi_small" android:drawablePadding="@dimen/padding_normal" style="@style/PressyRadioButton" />
    <View android:background="@color/separator" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <RadioButton android:gravity="center_vertical" android:id="@id/radioSettingsBluetooth" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/action_setting_toggle_bluetooth" android:drawableRight="@drawable/ic_action_settings_bluetooth_small" android:drawablePadding="@dimen/padding_normal" style="@style/PressyRadioButton" />
    <View android:background="@color/separator" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <RadioButton android:gravity="center_vertical" android:id="@id/radioSettingsSound" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/action_setting_toggle_sound" android:drawableRight="@drawable/ic_action_settings_sound_small" android:drawablePadding="@dimen/padding_normal" style="@style/PressyRadioButton" />
    <View android:background="@color/separator" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <RadioButton android:gravity="center_vertical" android:id="@id/radioSettingsVibrate" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/action_setting_toggle_vibrate" android:drawableRight="@drawable/ic_action_settings_vibrate_small" android:drawablePadding="@dimen/padding_normal" style="@style/PressyRadioButton" />
    <View android:background="@color/separator" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <RadioButton android:gravity="center_vertical" android:id="@id/radioSettingsScreenRotation" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/action_setting_lock_screen_rotation" android:drawableRight="@drawable/ic_action_settings_screen_rotation_small" android:drawablePadding="@dimen/padding_normal" style="@style/PressyRadioButton" />
    <View android:background="@color/separator" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <RadioButton android:gravity="center_vertical" android:id="@id/radioSettingsHomeScreen" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/action_setting_home_screen" android:drawableRight="@drawable/ic_action_settings_home_small" android:drawablePadding="@dimen/padding_normal" style="@style/PressyRadioButton" />
    <View android:background="@color/separator" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <RadioButton android:gravity="center_vertical" android:id="@id/radioSettingsCurtain" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/action_setting_curtain" android:drawableRight="@drawable/ic_action_settings_curtain_small" android:drawablePadding="@dimen/padding_normal" style="@style/PressyRadioButton" />
</RadioGroup>